Message time in the header

--- a/appinfo.json
+++ b/appinfo.json
@@ -2,39 +2,39 @@
     "appKeys": {
         "elec": 0,
         "elec_24": 1,
-        "elec_vs_yesterday": 2,
-        "elec_week": 3,
-        "elec_vs_week": 4,
-        "elec_month": 5,
-        "elec_vs_month": 6,
         "elec_cons": 7,
         "elec_cons_24": 8,
-        "elec_cons_vs_yesterday": 9,
-        "elec_cons_week": 10,
-        "elec_cons_vs_week": 11,
         "elec_cons_month": 12,
         "elec_cons_vs_month": 13,
+        "elec_cons_vs_week": 11,
+        "elec_cons_vs_yesterday": 9,
+        "elec_cons_week": 10,
         "elec_gen": 14,
         "elec_gen_24": 15,
-        "elec_gen_vs_yesterday": 16,
-        "elec_gen_week": 17,
-        "elec_gen_vs_week": 18,
         "elec_gen_month": 19,
         "elec_gen_vs_month": 20,
+        "elec_gen_vs_week": 18,
+        "elec_gen_vs_yesterday": 16,
+        "elec_gen_week": 17,
+        "elec_month": 5,
+        "elec_vs_month": 6,
+        "elec_vs_week": 4,
+        "elec_vs_yesterday": 2,
+        "elec_week": 3,
         "gas": 21,
         "gas_24": 22,
-        "gas_vs_yesterday": 23,
-        "gas_week": 24,
-        "gas_vs_week": 25,
         "gas_month": 26,
         "gas_vs_month": 27,
+        "gas_vs_week": 25,
+        "gas_vs_yesterday": 23,
+        "gas_week": 24,
         "water": 28,
         "water_24": 29,
-        "water_vs_yesterday": 30,
-        "water_week": 31,
-        "water_vs_week": 32,
         "water_month": 33,
-        "water_vs_month": 34
+        "water_vs_month": 34,
+        "water_vs_week": 32,
+        "water_vs_yesterday": 30,
+        "water_week": 31
     },
     "capabilities": [
         ""
